# options-trading-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  connection.py  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: backtest-plan.md  expert-interview.md  pipeline.md  reduce.md  reflect.md  reweave.md  seed.md  status.md  strategy-interview.md  strategy-review.md  vault-health.md  vault-stats.md  verify.md
.claude/rules/: 00-project-context.md  01-strategy-format.md  02-trading-safety.md
.claude/skills/: exa-company-research.md  exa-financial-reports.md  exa-social-sentiment.md  market-research.md  risk-audit.md  strategy-author.md
.github/workflows/: test.yml
core/: agent.py  market_hours.py  prompt_builder.py  routing.py  runner.py  strategy_loader.py
docs/plans/: 2026-03-13-alpaca-to-ibkr-migration.md
integrations/alpaca/: account.py  assets.py  client.py  config.py  market_data.py  options_data.py  orders.py  positions.py
integrations/data/: news.py  options_flow.py  social.py  technicals.py
integrations/ibkr/: account.py  assets.py  client.py  market_data.py  options_data.py  orders.py  positions.py
integrations/tavily/: search.py
knowledge/: .arscontexta  CLAUDE.md
knowledge/archive/: research_v0_ Options Risk Reversal Strategy.md
knowledge/notes/: 30-45 DTE is the primary vehicle for 10 percent target moves.md  (+72 more)
knowledge/ops/: config.yaml  (+5 more)
schemas/: alpaca.py  deps.py  market.py  output.py  strategy.py
state/: state.json
strategies/: _schema.yaml
tests/: test_agent.py  test_data_pipeline.py  test_end_to_end.py  test_runner.py  test_state.py  test_strategy.py
utils/: logging.py  state.py
(+6 files in other folders)
